--- a/ops/Dockerfile
+++ b/ops/Dockerfile
@@ -22,6 +22,8 @@ RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.
 WORKDIR /app
 COPY ops/nginx.conf /etc/nginx/nginx.conf
 COPY ops/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY ops/start-nginx.sh /app/ops/start-nginx.sh
+RUN chmod +x /app/ops/start-nginx.sh
 
 # Frontend in Webroot (liegt unter web/)
 COPY web /usr/share/nginx/html
