--- a/ops/supervisord.conf
+++ b/ops/supervisord.conf
@@ -12,7 +12,7 @@ stderr_logfile=/dev/stderr
 startretries=3
 
 [program:nginx]
-command=/usr/sbin/nginx -g 'daemon off;'
+command=/app/ops/start-nginx.sh
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
