Install missing tools and dependencies

--- a/ops/Dockerfile
+++ b/ops/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONUNBUFFERED=1 PIP_NO_CACHE_DIR=1
 
 # Systemdienste
 RUN apt-get update \
- && apt-get install -y --no-install-recommends nginx supervisor wget ca-certificates \
+ && apt-get install -y --no-install-recommends nginx supervisor wget ca-certificates gettext-base \
  && rm -rf /var/lib/apt/lists/*
 
 # Arbeitsverzeichnis
@@ -16,7 +16,11 @@ COPY api /app/api
 
 # Python-Abhängigkeiten der API (falls vorhanden)
 WORKDIR /app/api
-RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.txt; fi
+RUN if [ -f requirements.txt ]; then \
+        pip install --no-cache-dir -r requirements.txt; \
+    elif [ -f ebay-kleinanzeigen-api/requirements.txt ]; then \
+        pip install --no-cache-dir -r ebay-kleinanzeigen-api/requirements.txt; \
+    fi
 
 # Nginx & Supervisor Konfigs (liegen unter ops/)
 WORKDIR /app
