--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     shm_size: "1g"
     ipc: host
     environment:
-      ORS_API_KEY: "CHANGE_ME"
-      SEARCH_RADIUS_KM: "10"
-      STEP_KM: "50"
+      ORS_API_KEY: ${ORS_API_KEY}
+      SEARCH_RADIUS_KM: ${SEARCH_RADIUS_KM:-10}
+      STEP_KM: ${STEP_KM:-50}
