--- a/ops/supervisord.conf
+++ b/ops/supervisord.conf
@@ -9,6 +9,8 @@ autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 startretries=3
 
 [program:nginx]
@@ -17,4 +19,6 @@ autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 startretries=3
