Harden frontend and nginx configuration

--- a/web/config.js.template
+++ b/web/config.js.template
@@ -1,5 +1,5 @@
 window.CONFIG = {
   ORS_API_KEY: "${ORS_API_KEY}",
-  SEARCH_RADIUS_KM: "${SEARCH_RADIUS_KM}",
-  STEP_KM: "${STEP_KM}"
+  SEARCH_RADIUS_KM: ${SEARCH_RADIUS_KM},
+  STEP_KM: ${STEP_KM}
 };
