Add maintenance mode and fix progress bar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,5 @@ services:
       ORS_API_KEY: ${ORS_API_KEY}
       SEARCH_RADIUS_KM: ${SEARCH_RADIUS_KM:-10}
       STEP_KM: ${STEP_KM:-50}
+      MAINTENANCE_MODE: ${MAINTENANCE_MODE:-0}
+      MAINTENANCE_KEY: ${MAINTENANCE_KEY:-}
