--- a/web/config.js.template
+++ b/web/config.js.template
@@ -1,5 +1,7 @@
 window.CONFIG = {
   ORS_API_KEY: "${ORS_API_KEY}",
   SEARCH_RADIUS_KM: ${SEARCH_RADIUS_KM},
-  STEP_KM: ${STEP_KM}
+  STEP_KM: ${STEP_KM},
+  MAINTENANCE_MODE: ${MAINTENANCE_MODE},
+  MAINTENANCE_KEY: "${MAINTENANCE_KEY}"
 };
