feat: proxy ORS requests via backend

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Copy this file to .env and fill in your OpenRouteService API key.
+# The key is used only by the backend and is never exposed to the client.
 # Values in this file act as defaults and documentation.
 
 ORS_API_KEY=CHANGE_ME
