Add toggle to disable ORS reverse geocoding

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,4 @@ services:
       STEP_KM: ${STEP_KM:-50}
       MAINTENANCE_MODE: ${MAINTENANCE_MODE:-0}
       MAINTENANCE_KEY: ${MAINTENANCE_KEY:-}
+      USE_ORS_REVERSE: ${USE_ORS_REVERSE:-0}
